[tool.poetry]
name = "mons_gui"
version = "0.1.0"
description = ""
authors = ["Luca Leon Happel <luca.happel@uni-duesseldorf.de>"]

[tool.poetry.scripts]
mons_gui = "mons_gui.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
tk = "^0.1.0"
pysimplegui = "^4.57.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
